Pull up revision 1.96 (requested by jdolecek):   Avoid integer overflow preventing reading of files >2GB in size.   Fixes PR#9046.