sys/msdosfs/msdosfs_vnops.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: msdosfs_vnops.c,v 1.79.2.6 2000/02/04 23:00:17 he Exp $	*/
+/*	$NetBSD: msdosfs_vnops.c,v 1.79.2.7 2000/04/30 13:13:03 he Exp $	*/
 
 /*-
  * Copyright (C) 1994, 1995, 1997 Wolfgang Solfrank.
@@ -464,7 +464,7 @@ msdosfs_read(v)
 		struct ucred *a_cred;
 	} */ *ap = v;
 	int error = 0;
-	int diff;
+	int64_t diff;
 	int blsize;
 	int isadir;
 	long n;
@@ -490,11 +490,12 @@ msdosfs_read(v)
 		lbn = de_cluster(pmp, uio->uio_offset);
 		on = uio->uio_offset & pmp->pm_crbomask;
 		n = min((u_long) (pmp->pm_bpcluster - on), uio->uio_resid);
-		diff = dep->de_FileSize - uio->uio_offset;
-		if (diff <= 0)
+		if (uio->uio_offset >= dep->de_FileSize)
 			return (0);
+		/* file size (and hence diff) may be up to 4GB */
+		diff = dep->de_FileSize - uio->uio_offset;
 		if (diff < n)
-			n = diff;
+			n = (long) diff;
 		/* convert cluster # to block # if a directory */
 		if (isadir) {
 			error = pcbmap(dep, lbn, &lbn, 0, &blsize);
